css: gap fixes for footer under 700

--- a/sass/layout/_footer.sass
+++ b/sass/layout/_footer.sass
@@ -49,6 +49,7 @@
         justify-content: space-between
         min-height: 26.625rem
         transform: translateY(-7.5rem)
+        overflow: hidden
 
     &__top
         display: flex
@@ -158,7 +159,7 @@
                 &__columns
                     flex-flow: row wrap
                     justify-content: space-between
-                    max-width: 100%
+                    gap: 1.87rem
                 &__block, &__block:last-of-type
                     flex-flow: column wrap
                     gap: 3vw
@@ -178,6 +179,16 @@
     @media (max-width: 600px)
         .container
             padding: 2.5rem
+            gap: 1.87rem
+    @media (max-width: 540px)
+        &__bottom
+            align-items: start
+            text-align: left
+            gap: 1.87rem
+            .credits
+                align-items: start
+                text-align: left
+                padding-right: 5rem
     @media (max-width: 460px)
         &__top
             flex-flow: column wrap
@@ -190,19 +201,6 @@
                     gap: 1.27rem
                     a   
                         font-size: 1.125rem
-            .menu
-                &__columns
-                    flex-flow: column wrap
-                    justify-content: space-between
-                    max-width: 100%
-                    gap: 1.88rem
-                &__block, &__block:last-of-type
-                    flex-flow: column wrap
-                    gap: 1.25rem
-        &__bottom
-            align-items: start
-            text-align: left
-            .credits
-                align-items: start
         .up
-            bottom: 1rem
+            bottom: 4rem
+            right: 2rem
